Update Landfill - it was translated as rubbish dump

--- a/locale/pl.lang
+++ b/locale/pl.lang
@@ -1127,7 +1127,7 @@ greenwrappingpaper=Zielony Papier Pakowy
 bluewrappingpaper=Niebieski Papier Pakowy
 redwrappingpaper=Czerwony Papier Pakowy
 yellowwrappingpaper=Żółty Papier Pakowy
-landfill=Wysypisko Śmieci
+landfill=Wypełniacz Ziemi
 grassseed=Nasiona Trawy
 swampgrassseed=Nasiona Trawy Bagiennej
 fertilizer=Nawóz
